feat: Started Project List
Started project list on projects page.

--- a/content/projects/2018-10-31-projects.md
+++ b/content/projects/2018-10-31-projects.md
@@ -14,3 +14,8 @@ showpagemeta: yes
 
 This is a list of Data Analysis and Data Science projects that I have worked on both
 independtly as well as through online training.
+
+## Project List
+
+* Weather Trends
+* Movie Database Analysis
